...
        style="@style/LightEditText"
        android:layout_height="wrap_content"
        android:elevation="@dimen/default_padding"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/movie_title_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/movie_title"
            android:inputType="textPersonName"
            android:text="" />
...
                <ImageView
                    android:id="@+id/signtest"
                    android:layout_width="71dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="84dp"
                    android:layout_marginBottom="72dp"
                    app:layout_constraintBottom_toTopOf="@+id/edit_runtime"
                    app:layout_constraintStart_toEndOf="@+id/edit_image"
                    tools:srcCompat="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/lenddate"
                    android:layout_width="wrap_content"
...
                android:layout_marginTop="0dp"
                android:text="@string/movie_description" />

            <View style="@style/HeaderDivider" />

            <EditText
                android:id="@+id/edit_description"
                style="@style/LightEditText"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
...
                style="@style/DetailAttributeHeader"
                android:text="@string/movie_languages" />

            <View style="@style/HeaderDivider" />

            <EditText
                android:id="@+id/edit_languages"
                style="@style/LightEditText"
                android:background="@color/white"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/movie_enter_languages"
                android:importantForAutofill="no"
...
                style="@style/DetailAttributeHeader"
                android:text="@string/movie_productionLocations" />

            <View style="@style/HeaderDivider" />

            <EditText
                android:id="@+id/edit_production_locations"
                style="@style/LightEditText"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/movie_enter_production_locations"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
...
