<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    tools:context=".ui.detail.MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/near_white"
            android:paddingBottom="@dimen/default_padding"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                style="@style/PortrayableImageLarge"
                android:contentDescription="@string/list_item_portrayable_image"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/watch_date_header"
                style="@style/DetailAttributeHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/double_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/movie_watchDate"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/watch_date_divider"
                style="@style/HeaderDivider"
                android:layout_width="0dp"

                app:layout_constraintEnd_toEndOf="@id/watch_date_header"
                app:layout_constraintStart_toStartOf="@id/watch_date_header"
                app:layout_constraintTop_toBottomOf="@id/watch_date_header" />

            <TextView
                android:id="@+id/runtime_header"
                style="@style/HorizontalDetailAttributeHeader"
                android:layout_width="0dp"
                android:text="@string/movie_runtime"

                app:layout_constraintEnd_toEndOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <View
                android:id="@+id/runtime_header_divider"
                style="@style/HorizontalHeaderDivider"
                android:layout_height="0dp"
                android:layout_marginEnd="0dp"

                app:layout_constraintBottom_toBottomOf="@id/runtime_header"
                app:layout_constraintStart_toEndOf="@id/runtime_header"
                app:layout_constraintTop_toTopOf="@id/runtime_header" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/default_padding"
                android:paddingEnd="@dimen/default_padding"
                android:textColor="@color/black"
                android:textSize="24sp"

                app:layout_constraintBottom_toBottomOf="@id/runtime_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/runtime_header_divider"
                app:layout_constraintTop_toTopOf="@id/runtime_header" />

            <View
                style="@style/AttributeEnd"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/runtime_header" />

            <TextView
                android:id="@+id/rating_header"
                style="@style/HorizontalDetailAttributeHeader"
                android:layout_width="0dp"
                android:text="@string/movie_rating"

                app:layout_constraintEnd_toEndOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/runtime_header" />

            <View
                android:id="@+id/rating_divider"
                style="@style/HorizontalHeaderDivider"
                android:layout_height="0dp"
                android:layout_marginEnd="0dp"

                app:layout_constraintBottom_toBottomOf="@id/rating_header"
                app:layout_constraintStart_toEndOf="@id/rating_header"
                app:layout_constraintTop_toTopOf="@id/rating_header" />

            <View
                style="@style/AttributeEnd"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_header" />

            <TextView
                android:id="@+id/overall_rating_header"
                style="@style/HorizontalDetailAttributeHeader"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/half_margin"
                android:text="@string/movie_overallRating"

                android:textSize="18sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_header" />

            <View
                android:id="@+id/overall_rating_divider"
                style="@style/HorizontalHeaderDivider"
                android:layout_height="0dp"
                android:layout_marginEnd="0dp"

                app:layout_constraintBottom_toBottomOf="@id/overall_rating_header"
                app:layout_constraintStart_toEndOf="@id/overall_rating_header"
                app:layout_constraintTop_toTopOf="@id/overall_rating_header" />

            <View
                style="@style/AttributeEnd"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overall_rating_header" />

            <ImageView
                android:id="@+id/signavaliable"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="84dp"
                android:layout_marginTop="60dp"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/watch_date_divider"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/duedate"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/signavaliable" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EAEAEA"
            android:orientation="vertical"
            android:paddingBottom="?android:attr/actionBarSize">

            <TextView
                style="@style/DetailAttributeHeader"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:text="@string/movie_description" />

            <View style="@style/HeaderDivider" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="start|top"
                android:lines="8"
                android:maxLines="8"
                android:padding="@dimen/default_padding"
                android:scrollbars="vertical"
                android:textSize="18sp" />

            <View style="@style/AttributeEnd" />

            <TextView
                android:id="@+id/linked_performers_header"
                style="@style/DetailAttributeHeader"
                android:text="@string/linked_performers" />

            <View style="@style/HeaderDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/linked_performers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/linked_portrayables_height"
                android:background="@color/white"
                android:orientation="vertical" />

            <View style="@style/AttributeEnd" />

            <TextView
                style="@style/DetailAttributeHeader"
                android:text="@string/movie_languages" />

            <View style="@style/HeaderDivider" />

            <TextView
                android:id="@+id/languages"
                style="@style/DetailStringList" />

            <View style="@style/AttributeEnd" />


            <TextView
                style="@style/DetailAttributeHeader"
                android:text="@string/movie_productionLocations" />

            <View style="@style/HeaderDivider" />

            <TextView
                android:id="@+id/production_locations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/DetailStringList" />

            <View style="@style/AttributeEnd" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>