...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="363dp" />

        <ImageButton
            android:id="@+id/add_release_button"
            style="@style/FlatButton"
            android:layout_width="@dimen/base_square"
            android:layout_height="@dimen/base_square"
            android:layout_margin="0dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/movie_add_release_description"
...
        style="@style/HeaderDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/releases"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
